--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: BayView;
+  src: url('./assets/fonts/Bayview.ttf');
+}
+
+.bay-view-font {
+  font-family: BayView !important;
+}
+
+/*  */
+/*  */
+/*  */
 :root {
   --primay: black;
   --bg-primay: white;
