--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,12 @@
   font-family: BayView !important;
 }
 
+.tableWrap::-webkit-scrollbar {
+  height: 6px;
+  width: 6px;
+  background-color: #f5f5f5;
+}
+
 /* color */
 
 .shadow-red {
