--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+html{
+  background-color: #f9f9f9;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu',
