--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
 @font-face {
   font-family: BayView;
-  src: url('./assets/fonts/Bayview.ttf');
+  src: url('fonts/Bayview.ttf');
+}
+
+@font-face {
+  font-family: UVNHaiBaTrung;
+  src: url('fonts/UVNHaiBaTrung.TTF');
 }
 
 .bay-view-font {
