--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
 @font-face {
   font-family: UVNHaiBaTrung;
-  src: url('fonts/UVNHaiBaTrung.TTF');
+  src: url('/fonts/UVNHaiBaTrung.TTF');
 }
 
 .bay-view-font {
