--- a/src/components/carousel3d/carousel3d.css
+++ b/src/components/carousel3d/carousel3d.css
@@ -22,7 +22,7 @@
   transform-style: preserve-3d;
   -webkit-transform: rotateX(0deg);
   transform: rotateX(0deg);
-  height: 100%;
+  /* height: 100%; */
 }
 
 #drag-container img,
@@ -78,9 +78,7 @@
 
 #box-image-preview {
   width: 100%;
-  height: 500px;
-  background-color: red;
-  margin-top: 100px;
+  height: 626px;
 }
 
 @-webkit-keyframes spin {
