--- a/src/components/carousel3d/carousel3d.css
+++ b/src/components/carousel3d/carousel3d.css
@@ -123,14 +123,10 @@
   }
 }
 
-
-
-
 /*
 ---------------------------FOR MOBILE------------------------
 
 */
-
 
 /*
 * Coverflow
@@ -149,8 +145,8 @@
   top: 50%;
   left: 50%;
 
-  width: 170px;
-  height: 170px;
+  width: 100px;
+  height: 100px;
 
   margin-left: -90px;
   margin-top: -90px;
@@ -200,6 +196,5 @@
 }
 
 #controls a:hover {
-  color: 66FFFF;
+  color: 66ffff;
 }
-
